Добавляет активную кнопку по умолчанию

--- a/source/form.html
+++ b/source/form.html
@@ -65,7 +65,7 @@
         <legend class="form__legend fieldset-type__legend">Тип</legend>
         <ul class="form__list fieldset-type__list">
           <li class="form__option fieldset-type__option">
-            <input class="visually-hidden form__field fieldset-type__field" type="radio" name="type" id="type-accessory" value="accessory">
+            <input class="visually-hidden form__field fieldset-type__field" type="radio" name="type" id="type-accessory" value="accessory" checked>
             <label class="form__label fieldset-type__label" for="type-accessory">Аксессуар для интерьера</label>
           </li>
           <li class="form__option fieldset-type__option">
