Добавляет элемент кнопку

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -133,8 +133,9 @@
           <source src="video.ogg" type="video/ogg">
           <source src="video.webm" type="video/webm">
         </video>
+        <button class="production__button-play"><span class="visually-hidden">Воспроизвести</span></button>
         <p class="production__description">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
-        <button class="production__order" type="button">Сделать заказ</button>
+        <button class="production__button-order" type="button">Сделать заказ</button>
       </div>
     </section>
   </main>
