инлайнит ретиновые изображения

--- a/source/index.html
+++ b/source/index.html
@@ -185,7 +185,13 @@
           </p>
         </div>
       </div>
-      <a class ="contacts__map" href="#"><img class="contacts__img" src="img/map-mobile@1x.jpg" width="320" height="457" alt="Интернет магазин «Мишка» расположен по адресу г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101"></a>
+      <a class ="contacts__map" href="#">
+        <picture>
+          <source media="(min-width: 1150px)" srcset="img/map-desktop@1x.jpg, img/map-desktop@2x.jpg 2x">
+          <source media="(min-width: 768px)" srcset="img/map-tablet@1x.jpg, img/map-tablet@2x.jpg 2x">
+          <img class="contacts__img" src="img/map-mobile@1x.jpg" srcset="img/map-mobile@2x.jpg 2x" width="320" height="457" alt="Интернет магазин «Мишка» расположен по адресу г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
+        </picture>
+      </a>
       <a class="button contacts__button-feedback" href="feedback-form.html">Напишите нам</a>
     </section>
   </main>
