--- a/source/index.html
+++ b/source/index.html
@@ -110,8 +110,8 @@
         </tbody>
       </table>
       <picture>
-        <source type="image/webp" media="(min-width: 1150px)" srcset="img/triple-set-desktop@1x, img/triple-set-desktop@2x.webp 2x">
-        <source type="image/webp" media="(min-width: 768px)" srcset="img/triple-set-tablet@1x, img/triple-set-tablet@2x.webp 2x">
+        <source type="image/webp" media="(min-width: 1150px)" srcset="img/triple-set-desktop@1x.webp, img/triple-set-desktop@2x.webp 2x">
+        <source type="image/webp" media="(min-width: 768px)" srcset="img/triple-set-tablet@1x.webp, img/triple-set-tablet@2x.webp 2x">
         <source type="image/webp" srcset="img/triple-set-mobile@1x.webp, img/triple-set-mobile@2x.webp 2x">
         <source media="(min-width: 1150px)" srcset="img/triple-set-desktop@1x.jpg, img/triple-set-desktop@2x.jpg 2x">
         <source media="(min-width: 768px)" srcset="img/triple-set-tablet@1x.jpg, img/triple-set-tablet@2x.jpg 2x">
@@ -190,8 +190,8 @@
       </div>
       <a class ="contacts__map" href="#">
         <picture>
-          <source type="image/webp" media="(min-width: 1150px)" srcset="img/map-desktop@1x, img/map-desktop@2x.webp 2x">
-          <source type="image/webp" media="(min-width: 768px)" srcset="img/map-tablet@1x, img/map-tablet@2x.webp 2x">
+          <source type="image/webp" media="(min-width: 1150px)" srcset="img/map-desktop@1x.webp, img/map-desktop@2x.webp 2x">
+          <source type="image/webp" media="(min-width: 768px)" srcset="img/map-tablet@1x.webp, img/map-tablet@2x.webp 2x">
           <source type="image/webp" srcset="img/map-mobile@1x.webp, img/map-mobile@2x.webp 2x">
           <source media="(min-width: 1150px)" srcset="img/map-desktop@1x.jpg, img/map-desktop@2x.jpg 2x">
           <source media="(min-width: 768px)" srcset="img/map-tablet@1x.jpg, img/map-tablet@2x.jpg 2x">
