Добавляет в разметку блок sprite с тегом include

--- a/source/index.html
+++ b/source/index.html
@@ -7,6 +7,9 @@
   <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
+  <div class="sprite">
+    <include src="img/sprite.svg"></include>
+  </div>
   <header class="page-header">
     <div class="page-header__wrapper">
       <a class="page-header__logo page-header__logo--main">
