--- a/source/catalog.html
+++ b/source/catalog.html
@@ -7,6 +7,9 @@
   <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
+  <div class="sprite">
+    <include src="img/sprite.svg"></include>
+  </div>
   <header class="page-header">
     <div class="page-header__wrapper">
       <a class="page-header__logo" href="index.html" title="Ссылка на главную страницу">
