--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="sprite">
-    <include src="img/sprite.svg"></include>
+    <include src="build/img/sprite.svg"></include>
   </div>
   <header class="page-header">
     <div class="page-header__wrapper">
