--- a/source/index.html
+++ b/source/index.html
@@ -251,7 +251,7 @@
   </footer>
 
   <!--попапы-->
-  <section class="cart-add">
+  <section class="cart-add cart-add--closed">
     <div class="cart-add__wrapper">
       <h2 class="cart-add__title">Добавить в корзину</h2>
       <form class="cart-add__form" action="https://echo.htmlacademy.ru" method="get">
